Detalle del producto

--- a/SuperEconomicoApp/Views/ProductDetailsView.xaml
+++ b/SuperEconomicoApp/Views/ProductDetailsView.xaml
@@ -32,15 +32,15 @@
                    Aspect="AspectFit"
                    VerticalOptions="Start"
                    BackgroundColor="White"
-                   
+                    HeightRequest="290"
                    />
 
-            <Label Grid.Row="1" 
+            <!--<Label Grid.Row="1" 
                    Text="{Binding SelectedProductoItem.Name}"
                    TextColor="Black"
                    FontAttributes="Bold" 
                    FontSize="35" 
-                   Margin="25,-50,0,0"/>
+                   Margin="25,-50,0,0"/>-->
 
             <Label Text="&#xf060;" FontFamily="{StaticResource FontAwesome6Free-Solid-900}" FontSize="30" Grid.Row="0" HorizontalOptions="Start"
                    VerticalOptions="Start" Margin="10,30" BackgroundColor="Transparent" x:Name="lblIcono"/>
@@ -145,10 +145,10 @@
 
                 <!--<pancake:PancakeView CornerRadius="0,20,60,0"
                                      HorizontalOptions="Center">-->
-                    <Button Text="Agregar al Carrito" 
+                    <Button Text="Add al Carrito" 
                             BackgroundColor="{AppThemeBinding Light={StaticResource LightDefaultButtonColor},
                                Dark={StaticResource DarkDefaultButtonColor}}"
-                            WidthRequest="200" 
+                            WidthRequest="190" 
                             HorizontalOptions="Center"
                             Command="{Binding AddToCartCommand}"
                             HeightRequest="50"
