--- a/SuperEconomicoApp/Views/ProductDetailsView.xaml
+++ b/SuperEconomicoApp/Views/ProductDetailsView.xaml
@@ -4,7 +4,6 @@
              xmlns:Converter="clr-namespace:SuperEconomicoApp.Converters"
              xmlns:pancake="clr-namespace:Xamarin.Forms.PancakeView;assembly=Xamarin.Forms.PancakeView"
              x:Class="SuperEconomicoApp.Views.ProductDetailsView"
-             xmlns:controls="clr-namespace:SuperEconomicoApp.Controls;assembly=SuperEconomicoApp"
              Visual="Material"
               BackgroundColor="{AppThemeBinding Light={StaticResource LightPageBackgroundColor}, Dark={StaticResource DarkPageBackgroundColor}}">
 
@@ -32,15 +31,18 @@
                    Aspect="AspectFit"
                    VerticalOptions="Start"
                    BackgroundColor="White"
-                    HeightRequest="290"
+                    HeightRequest="300"
                    />
 
-            <!--<Label Grid.Row="1" 
+            <Label Grid.Row="1" 
                    Text="{Binding SelectedProductoItem.Name}"
-                   TextColor="Black"
+                   
                    FontAttributes="Bold" 
                    FontSize="35" 
-                   Margin="25,-50,0,0"/>-->
+                   FontFamily="{StaticResource CabinSketch-Bold}"
+                   TextColor="{AppThemeBinding Light={StaticResource LightPrimaryTextColor},
+                               Dark={StaticResource DarkPrimaryTextColor}}"
+                   Margin="25,-50,0,0"/>
 
             <Label Text="&#xf060;" FontFamily="{StaticResource FontAwesome6Free-Solid-900}" FontSize="30" Grid.Row="0" HorizontalOptions="Start"
                    VerticalOptions="Start" Margin="10,30" BackgroundColor="Transparent" x:Name="lblIcono"/>
@@ -143,47 +145,59 @@
             <StackLayout Orientation="Horizontal"
                          Grid.Row="4">
 
-                <!--<pancake:PancakeView CornerRadius="0,20,60,0"
-                                     HorizontalOptions="Center">-->
-                    <Button Text="Add al Carrito" 
+                <pancake:PancakeView CornerRadius="60,0,0,60"
+                                     HorizontalOptions="CenterAndExpand">
+                    <StackLayout>
+                        <Button Text="Add al Carrito" 
                             BackgroundColor="{AppThemeBinding Light={StaticResource LightDefaultButtonColor},
                                Dark={StaticResource DarkDefaultButtonColor}}"
-                            WidthRequest="190" 
+                            TextColor="White"
+                            WidthRequest="200" 
                             HorizontalOptions="Center"
                             Command="{Binding AddToCartCommand}"
                             HeightRequest="50"
-                            CornerRadius="8"
-                            Margin="10,0,0,0"/>
-                <!--</pancake:PancakeView>-->
+                                
+                            />
+                    </StackLayout>
+                  
+                </pancake:PancakeView>
 
-                <!--<pancake:PancakeView CornerRadius="0,20,60,0"
-                                     HorizontalOptions="Center">-->
-
-                    <Button Text="Ver Carrito" 
+                <pancake:PancakeView CornerRadius="0,60,60,0"
+                                     HorizontalOptions="CenterAndExpand"
+                                >
+                    <StackLayout>
+                        <Button Text="Ver Carrito" 
                             BackgroundColor="{AppThemeBinding Light={StaticResource LightDefaultButtonColor},
                                Dark={StaticResource DarkDefaultButtonColor}}"
-                            WidthRequest="190" 
+                            WidthRequest="200" 
                             HorizontalOptions="Center"
                             Command="{Binding ViewCartCommand}"
                             HeightRequest="50"
-                            CornerRadius="8"
-                             Margin="0,0,10,0"/>
-                <!--</pancake:PancakeView>-->
+                                   TextColor="White"
+                            
+                             />
+                    </StackLayout>
+
+                 
+                </pancake:PancakeView>
 
             </StackLayout>
 
-            <!--<pancake:PancakeView Grid.Row="6" 
-                                 CornerRadius="60,60,0,0">-->
+            <pancake:PancakeView Grid.Row="6" 
+                                 CornerRadius="60,60,0,0">
 
-                <Button Text="Inicio" 
-                        Grid.Row="6" 
+                <StackLayout>
+                    <Button Text="Inicio" 
+                        TextColor="White"
                         BackgroundColor="{AppThemeBinding Light={StaticResource LightInfoButtonColor},
                                Dark={StaticResource DarkInfoButtonColor}}"
                         HeightRequest="50"
                         Command="{Binding HomeCommand}"
-                        CornerRadius="20"
-                         Margin="10,0,10,0"/>
-            <!--</pancake:PancakeView>-->
+                       
+                         />
+                </StackLayout>
+            
+            </pancake:PancakeView>
 
 
         </Grid>
