Agregando datos a las ordenes en sus respectivas Listas

--- a/SuperEconomicoApp/Views/Delivery/ActiveOrdersDeliveryView.xaml
+++ b/SuperEconomicoApp/Views/Delivery/ActiveOrdersDeliveryView.xaml
@@ -47,7 +47,8 @@
                                            HeightRequest="45"/>
                                     <StackLayout Margin="15,0,0,0">
                                         <Label FontSize="18"
-                                               FontAttributes="Bold">
+                                               FontAttributes="Bold"
+                                               TextColor="#76448A">
                                             <Label.Text>
                                                 <MultiBinding StringFormat="{}{0} {1}">
                                                     <Binding Path="ClientName" />
@@ -55,7 +56,11 @@
                                                 </MultiBinding>
                                             </Label.Text>
                                         </Label>
-                                            <StackLayout Orientation="Horizontal">
+                                        <Label Text="{Binding NameUbication}"
+                                               FontSize="15"
+                                               FontAttributes="Bold"
+                                               Margin="0,-7,0,0"/>
+                                        <StackLayout Orientation="Horizontal">
                                             <Label Text="{Binding OrderDate}"
                                                FontSize="14"
                                                FontAttributes="Italic"/>
@@ -88,7 +93,7 @@
                                         Command="{Binding Source={x:Reference CurrentPage}, Path=BindingContext.ProceedWithDeliveryCommand}"
                                         CommandParameter="{Binding .}"/>
                                 </StackLayout>
-                                
+
 
                             </StackLayout>
 
@@ -127,6 +132,6 @@
 
 
 
-    
-    
+
+
 </ContentPage>
