Pruebas rastreo en segundo plano

--- a/SuperEconomicoApp/Views/Delivery/ActiveOrdersDeliveryView.xaml
+++ b/SuperEconomicoApp/Views/Delivery/ActiveOrdersDeliveryView.xaml
@@ -19,7 +19,8 @@
     </ContentPage.Resources>
 
     <Grid Padding="8">
-        <StackLayout IsVisible="{Binding ExistOrders}">
+        <StackLayout IsVisible="false">
+        <!--<StackLayout IsVisible="{Binding ExistOrders}">-->
             <CollectionView ItemsSource="{Binding ListOrders}"
                         VerticalOptions="CenterAndExpand">
 
@@ -113,7 +114,8 @@
             </StackLayout>
         </StackLayout>
 
-        <StackLayout IsVisible="{Binding NotExistOrders}" VerticalOptions="Center">
+        <StackLayout IsVisible="false" VerticalOptions="Center">
+        <!--<StackLayout IsVisible="{Binding NotExistOrders}" VerticalOptions="Center">-->
             <Image Source="list_empty.png"
                    WidthRequest="100"/>
             <Label Text="No tienes ningún pedido asignado" 
@@ -126,6 +128,25 @@
                 <Button Text="Cerrar"
                     Command="{Binding CerrarCommand}"/>
             </StackLayout>
+        </StackLayout>
+
+        <StackLayout>
+
+            <!--<Button Text="Comenzar Entrega"
+                    Command="{Binding ComenzarEntregaCommand}"/>
+
+            <Button Text="Pedido Entregado" 
+                    Command="{Binding TerminarEntregaCommand}"/>
+            <Label Text="{Binding LocationLabel}" />-->
+
+            <Button Text="Comenzar Entrega"
+                    Clicked="Button_Clicked"/>
+
+            <Button Text="Pedido Entregado" 
+                    x:Name="BtnOrderDelivered"
+                    Clicked="BtnOrderDelivered_Clicked"/>
+            <Label x:Name="locationLabel" />
+
         </StackLayout>
 
     </Grid>
